RESOLVED FIXED273514
Begin implementing iframe provisional navigation failure handling with site isolation
https://bugs.webkit.org/show_bug.cgi?id=273514
Summary Begin implementing iframe provisional navigation failure handling with site i...
Alex Christensen
Reported 2024-04-30 12:32:20 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-04-30 12:32:42 PDT
Alex Christensen
Comment 2 2024-04-30 12:34:33 PDT
EWS
Comment 3 2024-04-30 17:28:26 PDT
Committed 278198@main (b4d827b027d2): <https://commits.webkit.org/278198@main> Reviewed commits have been landed. Closing PR #27945 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.