Begin implementing iframe provisional navigation failure handling with site isolation https://bugs.webkit.org/show_bug.cgi?id=273514 rdar://127312255

Reviewed by Sihui Liu.

When a provisional load fails in a process, we need to send that process a message saying to
transition the LocalFrame used for the provisional load back to a RemoteFrame.  Also, the frame
transition functions need to be a little more symmetric.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::sendToWebPageInProcess):
(WebKit::WebPageProxy::didFailProvisionalLoadForFrameShared):
* Source/WebKit/UIProcess/WebPageProxy.h:
* Source/WebKit/WebProcess/WebPage/WebFrame.cpp:
(WebKit::WebFrame::transitionToRemote):
(WebKit::WebFrame::transitionToLocal):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/SiteIsolation.mm:
(TestWebKitAPI::TEST(SiteIsolation, NavigateIframeToProvisionalNavigationFailure)):

Canonical link: https://commits.webkit.org/278198@main