Tools/TestWebKitAPI/Tests/WebKitCocoa/SiteIsolation.mm
@@ -2470,6 +2470,55 @@ TEST(SiteIsolation, NavigateOpenerToProvisionalNavigationFailure)
     checkFrameTreesInProcesses(opened.webView.get(), { { RemoteFrame }, { "https://webkit.org"_s } });
 }
 
+TEST(SiteIsolation, NavigateIframeToProvisionalNavigationFailure)
+{
+    HTTPServer server({
+        { "/webkit"_s, { "<iframe id='testiframe' src='https://example.com/example'></iframe>"_s } },
+        { "/example"_s, { "hi"_s } },
+        { "/redirect_to_example_terminate"_s, { 302, { { "Location"_s, "https://example.com/terminate"_s } }, "redirecting..."_s } },
+        { "/redirect_to_webkit_terminate"_s, { 302, { { "Location"_s, "https://webkit.org/terminate"_s } }, "redirecting..."_s } },
+        { "/redirect_to_apple_terminate"_s, { 302, { { "Location"_s, "https://apple.com/terminate"_s } }, "redirecting..."_s } },
+        { "/terminate"_s, { HTTPResponse::TerminateConnection::Yes } }
+    }, HTTPServer::Protocol::HttpsProxy);
+
+    auto [webView, navigationDelegate] = siteIsolatedViewAndDelegate(server);
+    [webView loadRequest:[NSURLRequest requestWithURL:[NSURL URLWithString:@"https://webkit.org/webkit"]]];
+    [navigationDelegate waitForDidFinishNavigation];
+    checkFrameTreesInProcesses(webView.get(), {
+        { "https://webkit.org"_s,
+            { { RemoteFrame } }
+        }, { RemoteFrame,
+            { { "https://example.com"_s } }
+        },
+    });
+
+    __block bool provisionalLoadFailed { false };
+    navigationDelegate.get().didFailProvisionalLoadWithRequestInFrameWithError = ^(WKWebView *, NSURLRequest *, WKFrameInfo *frameInfo, NSError *) {
+        // FIXME: Check that the error is reasonable.
+        EXPECT_FALSE(frameInfo.isMainFrame);
+        provisionalLoadFailed = true;
+    };
+
+    __block RetainPtr blockScopeWebView { webView };
+    auto checkProvisionalLoadFailure = ^(NSString *url) {
+        provisionalLoadFailed = false;
+        [blockScopeWebView evaluateJavaScript:[NSString stringWithFormat:@"document.getElementById('testiframe').src = '%@'", url] completionHandler:nil];
+        while (!provisionalLoadFailed)
+            Util::spinRunLoop();
+        checkFrameTreesInProcesses(blockScopeWebView.get(), {
+            { "https://webkit.org"_s,
+                { { RemoteFrame } }
+            }, { RemoteFrame,
+                { { "https://example.com"_s } }
+            },
+        });
+    };
+    checkProvisionalLoadFailure(@"https://example.com/terminate");
+
+    // FIXME: Add tests navigating the iframe to https://webkit.org/terminate, https://apple.com/terminate, and each redirect_to_*_terminate.
+    // That seems to require a new model of provisional iframe loads in processes.
+}
+
 TEST(SiteIsolation, OpenThenClose)
 {
     HTTPServer server({
